fixed the alignment of buttons on page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,22 @@
 body{
+  background-color: #000000;
+  color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   height: 100vh;
   width: 100vw;
+  text-align: center;
   justify-content: center;
   align-items: center;
 }
 
 .buttons{
   width: 15vw;
+  height: 5vh;
   display: inline-block;
   padding: 0.35em 1.2em;
   border: 0.1em solid #FFFFFF;
-  margin: 0 0.3em 0.3em 0;
+  margin: 0 0.5em 0.5em 0;
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration:none;
@@ -21,6 +25,7 @@ body{
   color:#FFFFFF;
   text-align:center;
   transition: all 0.2s;
+  /* box-shadow: 1px 3px 5px white; */
 }
 
 .buttons:hover {
@@ -33,7 +38,7 @@ body{
   grid-template-columns: 0fr;
   grid-template-rows: 2fr;
   margin: 0px;
-  height: 50vh;
+  height: 45vh;
   background-color: #000000;
   color: #FFFFFF;
   justify-content: center;
@@ -44,6 +49,7 @@ body{
   margin: 0px;
   background-color: #000000;
   color: #FFFFFF;
+  padding: 0px 20px 20px 20px;
 }
 
 .show-your-playlist{
