--- a/client/src/containers/Instrument.css
+++ b/client/src/containers/Instrument.css
@@ -1,7 +1,7 @@
 .instrument-container{
     width: 97vw;
     height: 30vh;
-    background-color: black;
+    background-color: #000000;
     align-content: center;
     justify-content: center;
     margin: 0px;
