--- a/client/src/containers/Visual.css
+++ b/client/src/containers/Visual.css
@@ -1,6 +1,6 @@
 .visual-container{
     width: 100vw;
-    height: 70vh;
+    height: 50vh;
     background-color: black;
     align-content: center;
     justify-content: center;
